  * [powerpc/powerpc64,ppc64] Set NR_CPUS=2048, matching ppc64el
  * [powerpc*/*64*] Enable CPUMASK_OFFSTACK to reduce stack usage
  * [mips*el/loongson-3] Set NR_CPUS=16 to allow for Loongson 3B2000
  * [mips*/octeon] Set NR_CPUS=64 to allow for Cavium CN7890
  * [arm64] Set NR_CPUS=256 to allow for multi-SoC systems
  * [powerpc/powerpc-smp,powerpcspe] Explicitly set NR_CPUS=4

  [ Salvatore Bonaccorso ]
  * ping: implement proper locking (CVE-2017-2671)
  * fscrypt: remove broken support for detecting keyring key revocation
    (CVE-2017-7374)
  * mm/mempolicy.c: fix error handling in set_mempolicy and mbind
    (CVE-2017-7616)

 -- Ben Hutchings <ben@decadent.org.uk>  Thu, 30 Mar 2017 18:27:30 +0100

linux (4.9.18-1) unstable; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.9.17
    - net/mlx5e: Register/unregister vport representors on interface
      attach/detach
    - net/mlx5e: Do not reduce LRO WQE size when not using build_skb
    - net/mlx5e: Fix wrong CQE decompression
    - vxlan: correctly validate VXLAN ID against VXLAN_N_VID
    - vti6: return GRE_KEY for vti6
    - vxlan: don't allow overwrite of config src addr
    - ipv4: mask tos for input route
    - net sched actions: decrement module reference count after table flush.
    - l2tp: avoid use-after-free caused by l2tp_ip_backlog_recv
    - net: phy: Avoid deadlock during phy_error()
    - vxlan: lock RCU on TX path
    - geneve: lock RCU on TX path
    - tcp/dccp: block BH for SYN processing
    - net: bridge: allow IPv6 when multicast flood is disabled
    - net: don't call strlen() on the user buffer in packet_bind_spkt()
    - net: net_enable_timestamp() can be called from irq contexts
    - ipv6: orphan skbs in reassembly unit
    - dccp: Unlock sock before calling sk_free()
    - strparser: destroy workqueue on module exit
    - tcp: fix various issues for sockets morphing to listen state