@@ -1,6 +1,8 @@
-Package: linux-image-@abiname@@localversion@-dbgsym
+Package: linux-image-@abiname@@localversion@-dbg
 Build-Profiles: <!stage1>
 Depends: ${misc:Depends}
 Section: debug
 Priority: extra
 Description: Debug symbols for linux-image-@abiname@@localversion@
+ This package provides the detached debug symbols for the Linux kernel
+ and modules in linux-image-@abiname@@localversion@.
