@@ -19,6 +19,8 @@ linux (4.9.18-2) UNRELEASED; urgency=medium
   * [mips*/octeon] Set NR_CPUS=64 to allow for Cavium CN7890
   * [arm64] Set NR_CPUS=256 to allow for multi-SoC systems
   * [powerpc/powerpc-smp,powerpcspe] Explicitly set NR_CPUS=4
+  * Move debug symbols back to the main archive, to avoid problems with the
+    current handling in dak
 
   [ Salvatore Bonaccorso ]
   * ping: implement proper locking (CVE-2017-2671)
